--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "private": true,
   "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "webpack --hide-modules --watch",
+    "prod": "NODE_ENV=production npm run dev"
   },
-  "devDependencies": {
+  "dependencies": {
+    "axios": "^0.17.1",
     "bootstrap-sass": "^3.3.7",
-    "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
-    "lodash": "^4.16.2",
-    "vue": "^2.0.1",
+    "vue": "^2.5.5",
     "vue-resource": "^1.0.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "gulp": "^3.9.1",
+    "lodash": "^4.16.2",
+    "webpack": "^3.8.1"
   }
 }
