--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "bootstrap-sass": "^3.3.7",
-    "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-14",
-    "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.2",
-    "vue": "^2.5.5",
-    "vue-resource": "^1.0.3"
+    "bulma": "^0.6.1",
+    "vue": "^2.5.6",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "gulp": "^3.9.1",
-    "lodash": "^4.16.2",
+    "css-loader": "^0.28.7",
+    "node-sass": "^4.7.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.6",
     "webpack": "^3.8.1"
   }
 }
