--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bulma": "^0.6.1",
+    "moment": "^2.19.2",
     "vue": "^2.5.6",
     "vue-router": "^3.0.1"
   },
