--- a/package.json
+++ b/package.json
@@ -10,14 +10,30 @@
     "type": "git",
     "url": "git+https://github.com/brandnpatterson/laracasts-vue.git"
   },
-  "author": "",
+  "author": "Brandon Patterson",
   "license": "ISC",
+  "ava": {
+    "require": [
+      "babel-register",
+      "./test/helpers/setup-browser-env.js"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "bugs": {
     "url": "https://github.com/brandnpatterson/laracasts-vue/issues"
   },
   "homepage": "https://github.com/brandnpatterson/laracasts-vue#readme",
-  "dependencies": {},
+  "dependencies": {
+    "vue": "^2.5.7"
+  },
   "devDependencies": {
-    "ava": "^0.23.0"
+    "ava": "^0.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "browser-env": "^3.2.2"
   }
 }
